<resources>
    <string name="app_name">Espress.io</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="field_zero_hint">0.00</string>
    <string name="field_name_hint">New Profile</string>
    <string name="field_dose">Dose:</string>
    <string name="field_output">Output:</string>
    <string name="field_brix">Brix:</string>
    <string name="field_tds">TDS:</string>
    <string name="field_yield">Yield:</string>
    <string name="field_bean">Bean Profile:</string>
    <string name="field_solver">Solve Variable</string>
    <string name="field_name">Profile Name:</string>
    <string name="field_tds_tolerances">TDS Tolerances:</string>
    <string name="field_yield_tolerances">Yield Tolerances:</string>
    <string name="field_absorption">Absorption Factor:</string>
    <string name="check_include">Include Grind Mass</string>

    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>

    <string name="unit_grams">g</string>
    <string name="unit_ounces">oz</string>
    <string name="unit_percent">%</string>

    <string name="new_profile_spinner">Create a new profile...</string>
    <string name="new_profile">New Profile</string>

    <string name="preference_title">Settings</string>
    <string name="mass_unit_title">Select Mass Unit</string>
    <string-array name="mass_options">
        <item>Grams</item>
        <item>Ounces</item>
    </string-array>
    <string-array name="mass_options_alias">
        <item>@string/unit_grams</item>
        <item>@string/unit_ounces</item>
    </string-array>
    <string name="dump_to_csv_title">Dump To CSV</string>
    <string name="dump_to_csv_summary">Dumps all stored data and profiles to a csv file.</string>
    <string name="load_from_csv_title">Load From CSV</string>
    <string name="load_from_csv_summary">Loads profile and data information from a csv file</string>
    <string name="delete_database_title">Delete Stored Data</string>
    <string name="delete_database_summary">Delete all stored data points and profiles. THIS CANNOT BE UNDONE!</string>
    <string name="donate_title">Donate!</string>
    <string name="donate_summary">I helped you make your coffee, now help me make mine!</string>
</resources>
