<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CalculatorFragment">
    <TableRow>
       <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_dose"
            android:textSize="24sp"
            android:gravity="start"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/edit_dose"
            android:labelFor="@id/edit_dose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/field_zero_hint"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:gravity="end" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_output"
            android:textSize="24sp"
            android:gravity="start"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/edit_output"
            android:labelFor="@id/edit_output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/field_zero_hint"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:layout_weight="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_brix"
            android:textSize="24sp"
            android:gravity="start"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/edit_brix"
            android:labelFor="@id/edit_brix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/field_zero_hint"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:layout_weight="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_tds"
            android:textSize="24sp"
            android:gravity="start"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edit_tds"
            android:labelFor="@id/edit_tds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/field_zero_hint"
            android:inputType="none"
            android:editable="false"
            android:gravity="end"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_yield"
            android:textSize="24sp"
            android:gravity="start"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edit_yield"
            android:labelFor="@id/edit_yield"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/field_zero_hint"
            android:inputType="none"
            android:editable="false"
            android:gravity="end"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>

