<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="io.reed.dripr.ProfileFragment">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/tableLayout"
        android:layout_above="@+id/profile_button_save"
        android:layout_alignParentTop="true">
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_bean_spinner"
                android:textSize="@dimen/text_size_calc"
                android:gravity="center"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field_name"
                android:labelFor="@+id/profile_edit_name"
                android:id="@+id/profile_label_name"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/field_name_hint"
                android:id="@id/profile_edit_name"
                android:textSize="@dimen/text_size_calc"
                android:gravity="end"/>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/profile_label_tds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_tds"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/profile_edit_tds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/profile_label_yield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_yield"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/profile_edit_yield"
                android:labelFor="@id/edit_yield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/profile_label_tds_tolerances"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_tds_tolerances"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/profile_edit_tds_tolerances"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/profile_label_yield_tolerances"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_yield_tolerances"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/profile_edit_yield_tolerances"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/profile_label_absorption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_absorption"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/profile_edit_absorption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/profile_button_save"
        android:theme="@style/ToolbarTheme"
        android:enabled="true"
        android:layout_above="@+id/profile_button_delete"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:id="@+id/profile_button_delete"
        android:theme="@style/DeleteButton"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
