<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:androidPlot="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".SolverFragment">
    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:id="@+id/solver_row_bean"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_bean"
                android:id="@+id/solver_label_bean"
                android:gravity="start"
                android:textSize="@dimen/text_size_calc"
                android:layout_weight="1"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/solver_bean_spinner"
                android:textSize="@dimen/text_size_calc"
                android:gravity="end"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/solver_row_solver"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_solver"
                android:id="@+id/solver_label_solver"
                android:gravity="start"
                android:textSize="@dimen/text_size_calc"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/solver_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:gravity="end"
                android:layout_weight="1">
            </Spinner>
        </TableRow>
        <TableRow
            android:id="@+id/solver_row_include"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_include"
                android:id="@+id/solver_label_include"
                android:gravity="start"
                android:textSize="@dimen/text_size_calc"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text=""
                android:id="@+id/solver_check_include" />
        </TableRow>
        <TableRow
            android:id="@+id/solver_row_input"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/solver_label_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_dose"
                android:textSize="@dimen/text_size_calc"
                android:gravity="start"
                android:layout_weight="1" />
            <EditText
                android:id="@+id/solver_edit_input"
                android:labelFor="@id/solver_edit_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:gravity="end" />
        </TableRow>

        <TableRow
            android:id="@+id/solver_row_solution"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/solver_label_solution"
                android:textSize="@dimen/text_size_calc"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/solver_edit_solution"
                android:textSize="@dimen/text_size_calc"
                android:hint="@string/field_zero_hint"
                android:inputType="none"
                android:gravity="end"
                android:editable="false"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

</LinearLayout>

